force-app/main/default/objects/Account/fields/category1__c.field-meta.xml
<CustomField>
    <fullName>category1__c</fullName>
    <label>Category *</label>
    <type>TextArea</type>
</CustomField>