force-app/main/default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Student  Accounts</relationshipLabel>
    <relationshipName>Student_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>