force-app/main/default/objects/Account/fields/Centre__c.field-meta.xml
<CustomField>
    <fullName>Centre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centre</label>
    <referenceTo>Centre__c</referenceTo>
    <relationshipLabel>Student  Accounts</relationshipLabel>
    <relationshipName>Student_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>