force-app/main/default/objects/Account/fields/Centre_City__c.field-meta.xml
<CustomField>
    <fullName>Centre_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centre City (Backend)</label>
    <referenceTo>Centre_City__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>