force-app/main/default/objects/Account/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <label>Lost Reason in Brief</label>
    <type>TextArea</type>
</CustomField>