force-app/main/default/objects/Account/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <label>College</label>
    <length>255</length>
    <type>Text</type>
</CustomField>