force-app/main/default/objects/Account/fields/Copy_Mailing_To_Permanent_Address__c.field-meta.xml
<CustomField>
    <fullName>Copy_Mailing_To_Permanent_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Mailing To Permanent Address</label>
    <type>Checkbox</type>
</CustomField>