force-app/main/default/objects/Account/fields/DNC_Mobile__c.field-meta.xml
<CustomField>
    <fullName>DNC_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC Mobile</label>
    <type>Checkbox</type>
</CustomField>