force-app/main/default/objects/Account/fields/DNC_Phone__c.field-meta.xml
<CustomField>
    <fullName>DNC_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC Phone</label>
    <type>Checkbox</type>
</CustomField>