force-app/main/default/objects/Account/fields/First_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>First_Lead_Source__c</fullName>
    <label>Primary Lead Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>