force-app/main/default/objects/Account/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <length>80</length>
    <type>Text</type>
</CustomField>