force-app/main/default/objects/Account/fields/Graduation__c.field-meta.xml
<CustomField>
    <fullName>Graduation__c</fullName>
    <label>Graduation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>