force-app/main/default/objects/Account/fields/Graduation_CGPA__c.field-meta.xml
<CustomField>
    <fullName>Graduation_CGPA__c</fullName>
    <label>Graduation (CGPA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>