force-app/main/default/objects/Account/fields/How_IMS__c.field-meta.xml
<CustomField>
    <fullName>How_IMS__c</fullName>
    <label>How-IMS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>