force-app/main/default/objects/Account/fields/Identity__c.field-meta.xml
<CustomField>
    <fullName>Identity__c</fullName>
    <formula>Mailing_City__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identity(Backend)</label>
    <type>Text</type>
</CustomField>