force-app/main/default/objects/Account/fields/IMS_PIN__c.field-meta.xml
<CustomField>
    <fullName>IMS_PIN__c</fullName>
    <label>IMS PIN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>