force-app/main/default/objects/Account/fields/Last_Updated_Lead_Source_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Lead_Source_Time__c</fullName>
    <label>Last Updated Lead Source Time</label>
    <type>DateTime</type>
</CustomField>