force-app/main/default/objects/Account/fields/Lead_Activity__c.field-meta.xml
<CustomField>
    <fullName>Lead_Activity__c</fullName>
    <label>Lead Activity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>