force-app/main/default/objects/Account/fields/Lead_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lead_Lost_Reason__c</fullName>
    <label>Lead Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dropped idea</fullName>
            </value>
            <value>
                <fullName>High Fees</fullName>
            </value>
            <value>
                <fullName>Lost to competition</fullName>
            </value>
            <value>
                <fullName>No suitable batch</fullName>
            </value>
            <value>
                <fullName>Stopped responding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>