force-app/main/default/objects/Account/fields/Lead_Mode__c.field-meta.xml
<CustomField>
    <fullName>Lead_Mode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Mode</label>
    <referenceTo>Lead_Mode__c</referenceTo>
    <relationshipLabel>Student  Accounts</relationshipLabel>
    <relationshipName>Student_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>