force-app/main/default/objects/Account/fields/Lead_Mode_PickList__c.field-meta.xml
<CustomField>
    <fullName>Lead_Mode_PickList__c</fullName>
    <label>Lead Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Events</fullName>
                <label>Event Registration</label>
            </value>
            <value>
                <fullName>Telephonic</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Direct_Walkin</fullName>
                <label>Direct Walkin</label>
            </value>
            <value>
                <fullName>IMS Website - EF</fullName>
            </value>
            <value>
                <fullName>IMS Website - Chatbot</fullName>
            </value>
            <value>
                <fullName>Landing page</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
                <isActive>false</isActive>
                <label>Chat</label>
            </value>
            <value>
                <fullName>Digital</fullName>
                <isActive>false</isActive>
                <label>Digital</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>