force-app/main/default/objects/Account/fields/Lead_Rating__c.field-meta.xml
<CustomField>
    <fullName>Lead_Rating__c</fullName>
    <formula>IF( AND(Lead_Score__c &gt;0,Lead_Score__c &lt;11 ), &quot;Cold&quot;,
			IF( AND(Lead_Score__c &gt;10,Lead_Score__c &lt;16 ), &quot;Warm&quot;,
	IF	(	Lead_Score__c &gt;=16, &quot;Hot&quot;,NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Rating</label>
    <type>Text</type>
</CustomField>