force-app/main/default/objects/Account/fields/Lead_Source1__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Source*</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Lead_Source__c.Lead_Mode__c</field>
            <operation>equals</operation>
            <valueField>$Source.Lead_Mode__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lead_Source__c</referenceTo>
    <relationshipLabel>Student Accounts</relationshipLabel>
    <relationshipName>Student_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>