force-app/main/default/objects/Account/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source.</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Mode_PickList__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Justdial</fullName>
            </value>
            <value>
                <fullName>Sulekha</fullName>
            </value>
            <value>
                <fullName>Urbanpro</fullName>
            </value>
            <value>
                <fullName>Shiksha</fullName>
            </value>
            <value>
                <fullName>Studysid</fullName>
            </value>
            <value>
                <fullName>Google Adwords</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Exhibitions</fullName>
            </value>
            <value>
                <fullName>College Seminars</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Tollfree</fullName>
            </value>
            <value>
                <fullName>Email Enquiry</fullName>
            </value>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>Education Fairs</fullName>
            </value>
            <value>
                <fullName>IMS Events</fullName>
            </value>
            <value>
                <fullName>Walk-In</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Classroom</fullName>
                <isActive>false</isActive>
                <label>Classroom</label>
            </value>
            <value>
                <fullName>Comprehensive</fullName>
                <isActive>false</isActive>
                <label>Comprehensive</label>
            </value>
            <value>
                <fullName>Correspondence</fullName>
                <isActive>false</isActive>
                <label>Correspondence</label>
            </value>
            <value>
                <fullName>Test Series Online</fullName>
                <isActive>false</isActive>
                <label>Test Series Online</label>
            </value>
            <value>
                <fullName>Website queries</fullName>
                <isActive>false</isActive>
                <label>Website queries</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>