force-app/main/default/objects/Account/fields/Lead_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage__c</fullName>
    <label>Lead Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Counselling</fullName>
            </value>
            <value>
                <fullName>Partially Enrolled</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
                <isActive>false</isActive>
                <label>Converted</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Not Enrolled</fullName>
                <isActive>false</isActive>
                <label>Not Enrolled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>