force-app/main/default/objects/Account/fields/LIMA_Check__c.field-meta.xml
<CustomField>
    <fullName>LIMA_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LIMA Check</label>
    <type>Checkbox</type>
</CustomField>