force-app/main/default/objects/Account/fields/Mailing_Add1__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Add1__c</fullName>
    <label>Mailing Add1</label>
    <type>TextArea</type>
</CustomField>