force-app/main/default/objects/Account/fields/Mailing_Add2__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Add2__c</fullName>
    <label>Mailing Add2</label>
    <type>TextArea</type>
</CustomField>