force-app/main/default/objects/Account/fields/Mailing_Add3__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Add3__c</fullName>
    <label>Mailing Add3</label>
    <type>TextArea</type>
</CustomField>