force-app/main/default/objects/Account/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mailing City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Student  Accounts (Mailing City)</relationshipLabel>
    <relationshipName>Student_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>