force-app/main/default/objects/Account/fields/Mailing_Pin_code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Pin_code__c</fullName>
    <label>Mailing Pin  code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>