force-app/main/default/objects/Account/fields/Mobile_No_2__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No_2__c</fullName>
    <label>Mobile No 2</label>
    <type>Phone</type>
</CustomField>