force-app/main/default/objects/Account/fields/Mode_of_Coaching__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Coaching__c</fullName>
    <label>Exam Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>