force-app/main/default/objects/Account/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <length>20</length>
    <type>Text</type>
</CustomField>