force-app/main/default/objects/Account/fields/Parent_Created__c.field-meta.xml
<CustomField>
    <fullName>Parent_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent Created</label>
    <type>Checkbox</type>
</CustomField>