force-app/main/default/objects/Account/fields/Parent_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Email_Id__c</fullName>
    <label>Parent Email Id</label>
    <type>Email</type>
</CustomField>