force-app/main/default/objects/Account/fields/Permanent_Add1__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Add1__c</fullName>
    <label>Permanent Add1</label>
    <type>TextArea</type>
</CustomField>