force-app/main/default/objects/Account/fields/Permanent_Add2__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Add2__c</fullName>
    <label>Permanent Add2</label>
    <type>TextArea</type>
</CustomField>