force-app/main/default/objects/Account/fields/Permanent_Add3__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Add3__c</fullName>
    <label>Permanent Add3</label>
    <type>TextArea</type>
</CustomField>