force-app/main/default/objects/Account/fields/Permanent_City__c.field-meta.xml
<CustomField>
    <fullName>Permanent_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permanent City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Student  Accounts</relationshipLabel>
    <relationshipName>Student_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>