force-app/main/default/objects/Account/fields/Permanent_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Pincode__c</fullName>
    <label>Permanent Pincode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>