force-app/main/default/objects/Account/fields/Preference__c.field-meta.xml
<CustomField>
    <fullName>Preference__c</fullName>
    <label>Preference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>