force-app/main/default/objects/Account/fields/Present_In_LIMA__c.field-meta.xml
<CustomField>
    <fullName>Present_In_LIMA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Present In LIMA</label>
    <type>Checkbox</type>
</CustomField>