force-app/main/default/objects/Account/fields/Product_delivery_mode__c.field-meta.xml
<CustomField>
    <fullName>Product_delivery_mode__c</fullName>
    <label>Product delivery mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Classroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>