force-app/main/default/objects/Account/fields/Product_wise__c.field-meta.xml
<CustomField>
    <fullName>Product_wise__c</fullName>
    <label>Product wise</label>
    <length>20</length>
    <type>Text</type>
</CustomField>