force-app/main/default/objects/Account/fields/Program_Category__c.field-meta.xml
<CustomField>
    <fullName>Program_Category__c</fullName>
    <label>Program Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>