force-app/main/default/objects/Account/fields/Referral_Centre__c.field-meta.xml
<CustomField>
    <fullName>Referral_Centre__c</fullName>
    <label>Referral Centre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>