force-app/main/default/objects/Account/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <label>Referred By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Students</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>