force-app/main/default/objects/Account/fields/Referred_Name__c.field-meta.xml
<CustomField>
    <fullName>Referred_Name__c</fullName>
    <label>Referred Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>