force-app/main/default/objects/Account/fields/Source_Medium__c.field-meta.xml
<CustomField>
    <fullName>Source_Medium__c</fullName>
    <inlineHelpText>Sub-category of Source</inlineHelpText>
    <label>Source Medium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Display ads</fullName>
            </value>
            <value>
                <fullName>Facebook event</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Local campaign</fullName>
            </value>
            <value>
                <fullName>Traffic (Single Image/ Carausal)</fullName>
            </value>
            <value>
                <fullName>Boost Post</fullName>
            </value>
            <value>
                <fullName>Traffic/ Lead Generation</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>