force-app/main/default/objects/Account/fields/Stream__c.field-meta.xml
<CustomField>
    <fullName>Stream__c</fullName>
    <label>Stream</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stream</valueSetName>
    </valueSet>
</CustomField>