force-app/main/default/objects/Account/fields/Student_Referral_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Referral_Name__c</fullName>
    <label>Student Referral Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>