force-app/main/default/objects/Account/fields/Test_preparation_required_for__c.field-meta.xml
<CustomField>
    <fullName>Test_preparation_required_for__c</fullName>
    <label>Test preparation required for</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>