force-app/main/default/objects/Account/fields/Total_Closed_Lost_No__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_Lost_No__c</fullName>
    <label>Total Closed Lost No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>