force-app/main/default/objects/Account/fields/Total_Enrolled_no__c.field-meta.xml
<CustomField>
    <fullName>Total_Enrolled_no__c</fullName>
    <label>Total Enrolled no</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>