force-app/main/default/objects/Account/fields/Total_Work_experience_in_months__c.field-meta.xml
<CustomField>
    <fullName>Total_Work_experience_in_months__c</fullName>
    <label>Total Work experience in months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>