force-app/main/default/objects/Account/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variant</label>
    <referenceTo>Variant__c</referenceTo>
    <relationshipLabel>Student  Accounts</relationshipLabel>
    <relationshipName>Student_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>