force-app/main/default/objects/Account/fields/Waiver_Code__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Code__c</fullName>
    <label>Waiver Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>