force-app/main/default/objects/Account/fields/Walk_In_scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Walk_In_scheduled_Date__c</fullName>
    <label>Walk-In scheduled Date</label>
    <type>Date</type>
</CustomField>