force-app/main/default/objects/Account/fields/Web_To_Lead_Mode__c.field-meta.xml
<CustomField>
    <fullName>Web_To_Lead_Mode__c</fullName>
    <label>Web  To Lead Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>