force-app/main/default/objects/Account/fields/Web_to_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Web_to_Lead_Source__c</fullName>
    <label>Web to Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>