force-app/main/default/objects/Account/fields/Whats_app_No__c.field-meta.xml
<CustomField>
    <fullName>Whats_app_No__c</fullName>
    <label>Whats-app No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>