force-app/main/default/objects/Account/fields/Whatsapp_Number__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp_Number__c</fullName>
    <label>Whatsapp Number</label>
    <type>Phone</type>
</CustomField>