force-app/main/default/objects/Account/fields/Work_Experience__c.field-meta.xml
<CustomField>
    <fullName>Work_Experience__c</fullName>
    <label>Work Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>