force-app/main/default/objects/Account/fields/X0th_Score__c.field-meta.xml
<CustomField>
    <fullName>X0th_Score__c</fullName>
    <label>10th Score %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>