force-app/main/default/objects/Account/fields/X10th_Board__c.field-meta.xml
<CustomField>
    <fullName>X10th_Board__c</fullName>
    <label>10th Board</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X10th_Board</valueSetName>
    </valueSet>
</CustomField>