force-app/main/default/objects/Account/fields/X12th_Board__c.field-meta.xml
<CustomField>
    <fullName>X12th_Board__c</fullName>
    <label>12th Board</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X12th_Board</valueSetName>
    </valueSet>
</CustomField>