force-app/main/default/objects/Account/fields/X2th_Score__c.field-meta.xml
<CustomField>
    <fullName>X2th_Score__c</fullName>
    <label>12th Score %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>