force-app/main/default/objects/Account/recordTypes/Student_Account1.recordType-meta.xml
<RecordType>
    <fullName>Student_Account1</fullName>
    <active>true</active>
    <label>Student Account*</label>
</RecordType>