force-app/main/default/objects/Account/validationRules/Closed_Lost_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Text(Lead_Stage__c) =&apos;Closed Lost&apos;, TEXT(Lead_Lost_Reason__c )=null)</errorConditionFormula>
    <errorDisplayField>Lead_Lost_Reason__c</errorDisplayField>
    <errorMessage>Please select Closed reson</errorMessage>
</ValidationRule>