force-app/main/default/objects/Account/validationRules/Do_Not_Change_lead_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_Not_Change_lead_Stage_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
CASE(PRIORVALUE(Lead_Stage__c),
&quot;	Open&quot;,0,
&quot;Working&quot;,0,
&quot;Counselling&quot;,0,
&quot;Enrolled&quot;,0,
&quot;Partially Enrolled&quot;,0,
&quot;Closed Lost&quot;,1,

0)=1,

ISCHANGED(Lead_Stage__c)
)</errorConditionFormula>
    <errorDisplayField>Lead_Stage__c</errorDisplayField>
    <errorMessage>You can not edit this lead stage because it is already Closed Won.</errorMessage>
</ValidationRule>