force-app/main/default/objects/Account/validationRules/Qualified_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>Qualified_Lead</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
TEXT( Lead_Stage__c )= &quot;Qualified&quot;,

OR(
ISBLANK( Lead_Mode__c ),
ISBLANK( Lead_Source1__c ),
 ISBLANK(Mailing_City__c),
ISBLANK( Program__c )
) 







)</errorConditionFormula>
    <errorDisplayField>Lead_Stage__c</errorDisplayField>
    <errorMessage>Must fill Lead Mode, Source, City and Program to change the Lead stage as Qualified</errorMessage>
</ValidationRule>