force-app/main/default/objects/Account/validationRules/Validation_on_Change_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Change_Owner</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Owner.FirstName &lt;&gt; &apos;Ayush&apos; ,Owner.FirstName &lt;&gt; &apos;Mathew&apos; )</errorConditionFormula>
    <errorMessage>You can not able to change record owner. Contact to system administrator</errorMessage>
</ValidationRule>