force-app/main/default/objects/Account/validationRules/Validation_On_Closed_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_On_Closed_Lost</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Lead_Stage__c ,&quot;Closed Lost&quot;),
				ISBLANK(Closed_Lost_Reason__c))</errorConditionFormula>
    <errorDisplayField>Closed_Lost_Reason__c</errorDisplayField>
    <errorMessage>Please enter the reason for &quot;Closed Lost&quot;</errorMessage>
</ValidationRule>